--- a/Variables/index.html
+++ b/Variables/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JavaScript</title>
+    <title>Variables</title>
   </head>
   <body>
-    <h1 style="font-size: 50px; text-align: center">JavaScript</h1>
+    <h1 style="text-align: center; font-size: 25px; font-weight: 600">
+      Variables
+    </h1>
+    <script src="./Variables.js"></script>
   </body>
 </html>
